# BSplineLib

./: .clang-format  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  STYLEGUIDE.md
Examples/Evaluation/: CMakeLists.txt  evaluation.cpp
Sources/: CMakeLists.txt
Sources/BSplineLib/: CMakeLists.txt
Sources/BSplineLib/InputOutput/: CMakeLists.txt  iges.cpp  iges.hpp  irit.cpp  irit.hpp  operations.cpp  operations.hpp  operations.inl  vtk.cpp  vtk.hpp  xml.cpp  xml.hpp
Sources/BSplineLib/Models/: CMakeLists.txt  rectangular.hpp  (+1 more)
Sources/BSplineLib/Splines/: CMakeLists.txt  b_spline.hpp  b_spline.inc  b_spline.inl  nurbs.hpp  nurbs.inc  nurbs.inl  spline.hpp  spline.inc  spline.inl  spline_item.cpp  spline_item.hpp
Sources/BSplineLib/VectorSpaces/: CMakeLists.txt  vector_space.cpp  vector_space.hpp  vector_space.inc  vector_space.inl  weighted_vector_space.cpp  weighted_vector_space.hpp  weighted_vector_space.inc  weighted_vector_space.inl
Sources/InputOutput/: CMakeLists.txt  iges.cpp  iges.hpp  irit.cpp  irit.hpp  operations.cpp  operations.hpp  operations.inc  vtk.cpp  vtk.hpp  xml.cpp  xml.hpp
Sources/Models/: CMakeLists.txt  rectangular.hpp  rectangular.inc
Sources/ParameterSpaces/: CMakeLists.txt  b_spline_basis_function.cpp  b_spline_basis_function.hpp  knot_vector.cpp  knot_vector.hpp  non_zero_degree_b_spline_basis_function.cpp  non_zero_degree_b_spline_basis_function.hpp  parameter_space.cpp  parameter_space.hpp  parameter_space.inc  zero_degree_b_spline_basis_function.cpp  zero_degree_b_spline_basis_function.hpp
Sources/Splines/: CMakeLists.txt  b_spline.cpp  b_spline.hpp  b_spline.inc  nurbs.cpp  nurbs.hpp  nurbs.inc  spline.cpp  spline.hpp  spline.inc  spline_item.cpp  spline_item.hpp
Sources/Utilities/: CMakeLists.txt  error_handling.hpp  error_handling.inc  index.hpp  index.inc  math_operations.cpp  math_operations.hpp  named_type.hpp  named_type.inc  numeric_operations.hpp  numeric_operations.inc  std_container_operations.hpp  std_container_operations.inc  string_operations.cpp  string_operations.hpp  string_operations.inc  system_operations.cpp  system_operations.hpp  system_operations.inc
Sources/VectorSpaces/: CMakeLists.txt  vector_space.cpp  vector_space.hpp  vector_space.inc  weighted_vector_space.cpp  weighted_vector_space.hpp  weighted_vector_space.inc
Tests/: CMakeLists.txt
Tests/InputOutput/: CMakeLists.txt  config_iges.in.hpp  config_irit.in.hpp  config_xml.in.hpp  iges_test.cpp  irit_test.cpp  operations_test.cpp  test.itd  vtk_test.cpp  xml_test.cpp
Tests/Models/: CMakeLists.txt  rectangular_test.cpp
Tests/ParameterSpaces/: CMakeLists.txt  b_spline_basis_function_mock.cpp  b_spline_basis_function_mock.hpp  b_spline_basis_function_test.cpp  knot_vector_mock.cpp  knot_vector_mock.hpp  knot_vector_test.cpp  non_zero_degree_b_spline_basis_function_mock.cpp  non_zero_degree_b_spline_basis_function_mock.hpp  non_zero_degree_b_spline_basis_function_test.cpp  parameter_space_2d.cpp  parameter_space_2d.hpp  parameter_space_mock.cpp  parameter_space_mock.hpp  parameter_space_test.cpp  zero_degree_b_spline_basis_function_mock.cpp  zero_degree_b_spline_basis_function_mock.hpp  zero_degree_b_spline_basis_function_test.cpp
Tests/Splines/: CMakeLists.txt  b_spline_mock.cpp  b_spline_mock.hpp  b_spline_test.cpp  nurbs_2d_to_3d.cpp  nurbs_2d_to_3d.hpp  nurbs_mock.cpp  nurbs_mock.hpp  nurbs_test.cpp  spline_item_mock.cpp  spline_item_mock.hpp  spline_item_test.cpp  spline_test.cpp
Tests/Utilities/: CMakeLists.txt  error_handling_test.cpp  index_mock.cpp  index_mock.hpp  index_test.cpp  math_operations_test.cpp  named_type_test.cpp  numeric_operations_test.cpp  std_container_operations_test.cpp  string_operations_test.cpp  system_operations_test.cpp
Tests/VectorSpaces/: CMakeLists.txt  vector_space_mock.cpp  vector_space_mock.hpp  vector_space_test.cpp  weighted_vector_space_3d.cpp  weighted_vector_space_3d.hpp  weighted_vector_space_mock.cpp  weighted_vector_space_mock.hpp  weighted_vector_space_test.cpp
Tools/: CMakeLists.txt
Tools/Sources/: CMakeLists.txt  converter.cpp  log_operations.cpp  log_operations.hpp  log_operations.inc  sampler.cpp
Tools/Tests/: CMakeLists.txt  config_log.in.hpp  log_operations_test.cpp
Uml/: splinelib.xml
Uml/InputOutput/: input_output.xml
Uml/Models/: models.xml
Uml/ParameterSpaces/: b_spline_basis_functions.xml  knot_vector.xml  parameter_space.xml  parameter_spaces.xml
Uml/Splines/: spline_item.xml  splines.xml
Uml/Utilities/: index.xml  named_type.xml  utilities.xml
Uml/VectorSpaces/: vector_space.xml  vector_spaces.xml
(+38 files in other folders)
